Fix syntax highlighting for Chrome - change asm to text language tag
- Changed asm code blocks to text to fix highlight.js errors
- Added book/ to .gitignore

Signed-off-by: Panagiotis Georgiadis <drpaneas@gmail.com>

--- a/book.toml
+++ b/book.toml
@@ -14,3 +14,5 @@ preferred-dark-theme = "navy"
 git-repository-url = "https://github.com/drpaneas/libgodc"
 edit-url-template = "https://github.com/drpaneas/libgodc/edit/main/{path}"
 site-url = "/libgodc/"
+additional-css = ["docs/theme/custom.css"]
+no-section-label = true
