fix: auto-detect KOS_BASE path in Makefiles
Instead of hardcoding /opt/toolchains/dc/kos, now the Makefiles:
1. Use KOS_BASE env var if set (from sourcing environ.sh)
2. Fall back to ~/dreamcast/kos if it exists
3. Fall back to /opt/toolchains/dc/kos as last resort

This makes libgodc work with different installation paths.

Signed-off-by: Panagiotis Georgiadis <drpaneas@gmail.com>

--- a/kos/Makefile
+++ b/kos/Makefile
@@ -2,7 +2,7 @@
 GCCGO = sh-elf-gccgo
 AR = sh-elf-ar
 OBJCOPY = sh-elf-objcopy
-KOS_BASE ?= /opt/toolchains/dc/kos
+KOS_BASE ?= $(shell if [ -d "$(HOME)/dreamcast/kos" ]; then echo "$(HOME)/dreamcast/kos"; else echo "/opt/toolchains/dc/kos"; fi)
 
 # Source files (gccgo builds only - exclude _stub.go files)
 GO_SOURCES = types.go \
